--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+aubio = "*"
 pyaudio = "*"
 numpy = "*"
-aubio = "*"
 opencv-python = "*"
 
 [requires]
-python_version = "*"
+python_version = "3.7"
